--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<audio src="bridge-LABUBA.mp3" autoplay> </audio> <audio src="bridge-LABUBA.mp3" type="audio/mpeg"> Ваш браузер не поддерживает тег audio. </audio>
+<audio src="bridge-LABUBA.mp3" autoplay muted> </audio> <audio src="bridge-LABUBA.mp3" type="audio/mpeg"> Ваш браузер не поддерживает тег audio. </audio>
 
 
     <div class="container">
@@ -62,4 +62,5 @@
     </div>
 
 </body>
+
 </html>
