--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-<audio src="bridge-LABUBA.mp3" autoplay muted> </audio> <audio src="bridge-LABUBA.mp3" type="audio/mpeg"> Ваш браузер не поддерживает тег audio. </audio>
+<audio src="bridge-LABUBA.mp3" autoplay> </audio> 
+<audio src="bridge-LABUBA.mp3" type="audio/mpeg" autoplay> Ваш браузер не поддерживает тег audio. </audio>
 
 
     <div class="container">
@@ -64,3 +65,4 @@
 </body>
 
 </html>
+
