--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 
-<audio src="bridge-LABUBA.mp3" autoplay> </audio> 
-<audio src="bridge-LABUBA.mp3" type="audio/mpeg" autoplay> Ваш браузер не поддерживает тег audio. </audio>
+<audio autoplay> 
+<source scr="bridg-LABUBA.mp3" type="audio/mpeg">
+     Ваш браузер не поддерживает тег audio.
+</audio> 
 
 
     <div class="container">
@@ -65,4 +67,5 @@
 </body>
 
 </html>
+
 
