--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <audio autoplay> 
-<source scr="bridg-LABUBA.mp3" type="audio/mpeg">
+<source scr="bridge-LABUBA.mp3" type="audio/mpeg">
      Ваш браузер не поддерживает тег audio.
 </audio> 
 
@@ -67,5 +67,6 @@
 </body>
 
 </html>
+
 
 
