--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <audio autoplay> 
 <source scr="bridge-LABUBA.mp3" type="audio/mpeg">
+<source scr="bridge-LABUBA.ogg" type="audio/ogg">
      Ваш браузер не поддерживает тег audio.
 </audio> 
 
@@ -67,6 +68,7 @@
 </body>
 
 </html>
+
 
 
 
