--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 <source scr="bridge-LABUBA.ogg" type="audio/ogg">
      Ваш браузер не поддерживает тег audio.
 </audio> 
-
+<audio controls>
+  <source src="bridge-LABUBA.ogg" type="audio/ogg">
+  <source src="bridge-LABUBA.mp3" type="audio/mpeg">
+  Your browser does not support the audio tag.
+</audio>
 
     <div class="container">
         <h1>❤️ С 14 Февраля! ❤️</h1>
@@ -68,6 +72,7 @@
 </body>
 
 </html>
+
 
 
 
