--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
      
 </head>
 <body>
-
-<audio autoplay> 
-<source scr="bridge-LABUBA.mp3" type="audio/mpeg">
-<source scr="bridge-LABUBA.ogg" type="audio/ogg">
-     Ваш браузер не поддерживает тег audio.
-</audio> 
-<audio controls>
+    
+<audio controls autoplay>
   <source src="bridge-LABUBA.ogg" type="audio/ogg">
   <source src="bridge-LABUBA.mp3" type="audio/mpeg">
   Your browser does not support the audio tag.
@@ -72,6 +67,7 @@
 </body>
 
 </html>
+
 
 
 
