--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-<audio controls autoplay>
+<audio autoplay>
   <source src="bridge-LABUBA.ogg" type="audio/ogg">
   <source src="bridge-LABUBA.mp3" type="audio/mpeg">
   Your browser does not support the audio tag.
@@ -67,6 +67,7 @@
 </body>
 
 </html>
+
 
 
 
