--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-<audio autoplay>
+<audio id="bgMusic" autoplay muted loop>
   <source src="bridge-LABUBA.ogg" type="audio/ogg">
   <source src="bridge-LABUBA.mp3" type="audio/mpeg">
   Your browser does not support the audio tag.
@@ -58,6 +58,14 @@
                 popup.style.display = 'none';
             }
         });
+
+const music = document.getElementById('bgMusic');
+
+document.addEventListener('click', function() {
+    music.muted = false;
+    music.play();
+}, { once: true });
+        
     </script>
 
 <div style="position: fixed; bottom: 10px; right: 10px; opacity: 0.5; font-size: 20px;">
@@ -67,6 +75,7 @@
 </body>
 
 </html>
+
 
 
 
